--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
                     <ul>
                         <li><a class="text-header" href="#">Студия</a></li>
-                        <li><a class="text-header" href="#">Портфолио</a></li>
+                        <li><a class="text-header" href="./portfolio.html">Портфолио</a></li>
                         <li><a class="text-header" href="#">Контакты</a></li>
                     </ul>
 
