--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
                 </a>
         
                 <ul>
-                    <li><a class="text-header" href="#">Студия</a></li>
+                    <li><a class="text-header" href="./index.html">Студия</a></li>
                     <li><a class="text-header" href="#">Портфолио</a></li>
                     <li><a class="text-header" href="#">Контакты</a></li>
                 </ul>
