homework2 after chek

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
                 <ul>
 
-                    <li><a class=text-header href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li><a class=text-header href="tel:+380961111111">+38 096 111 11 11</a></li>
+                    <li><a class=text-header-gray href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li><a class=text-header-gray href="tel:+380961111111">+38 096 111 11 11</a></li>
 
                 </ul>
 
@@ -143,7 +143,7 @@
 
         <footer>
 
-            <a href="/" class="logo">
+            <a href="/" class="logo-footer">
                 <p>
                     <span class="logo-begin">Web</span>Studio
                 </p>
